<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="@dimen/_5ssp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <ImageView
        android:id="@+id/rec_icon_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/saved_rec_item_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/rec_name_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/rec_icon_id"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/dummy_recorded_file"
        android:layout_marginStart="@dimen/_10ssp"
        app:layout_constraintBottom_toTopOf="@+id/rec_size_id"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rec_size_id"
        app:layout_constraintTop_toBottomOf="@+id/rec_name_id"
        android:text="@string/dummy_recorded_file_size"
        app:layout_constraintStart_toEndOf="@+id/rec_icon_id"
        android:layout_marginStart="@dimen/_10ssp"
        app:layout_constraintBottom_toBottomOf="parent"/>
    
    <TextView
        android:id="@+id/time_of_store_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummy_recorded_time"
        app:layout_constraintStart_toEndOf="@+id/rec_size_id"
        android:layout_marginStart="@dimen/_10ssp"
        app:layout_constraintTop_toBottomOf="@+id/rec_name_id"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/send_rec_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/send_msg_icon"
        app:tint="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="@dimen/_20ssp"/>

    <ImageView
        android:id="@+id/play_rec_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_play_arrow_24"
        app:tint="@color/green"
        app:layout_constraintEnd_toStartOf="@+id/send_rec_id"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="@dimen/_20ssp"/>



    <View
        android:id="@+id/myRectangleView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/_20ssp"
        android:layout_marginTop="@dimen/_7ssp"
        app:layout_constraintTop_toBottomOf="@+id/rec_icon_id"
        android:background="@drawable/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>