<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.VoiceRecFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/recording_card"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_170sdp"
        android:layout_margin="@dimen/_15ssp"
        app:cardCornerRadius="@dimen/_8ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/green">

            <TextView
                style="@style/textStyle"
                android:text="@string/recordingTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/record_time"
                android:textStyle="bold"
                android:textSize="@dimen/_20ssp"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/record_time_limit"/>

            <TextView
                style="@style/textStyle"
                android:textColor="@color/white"
                android:text="@string/recordingTimeLimit"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:id="@+id/record_time_limit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/record_time"
                app:layout_constraintBottom_toTopOf="@+id/recording_status"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/recording_status"
                android:text="@string/status_recording_start"
                android:textStyle="bold"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/record_time_limit"
                app:layout_constraintBottom_toBottomOf="parent"/>


           <com.airbnb.lottie.LottieAnimationView
               android:id="@+id/recording_lottie"
               android:layout_width="match_parent"
               android:layout_height="@dimen/_80sdp"
               app:lottie_rawRes="@raw/recording_animation"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/record_time_limit"
               app:layout_constraintBottom_toBottomOf="parent"/>



        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/record_voice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/start_recording_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recording_card"
        android:layout_marginTop="@dimen/_20ssp"/>


    <FrameLayout
        android:id="@+id/ad_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/transparent"
        android:background="@color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_20ssp"
        app:layout_constraintTop_toBottomOf="@+id/record_voice"/>


</androidx.constraintlayout.widget.ConstraintLayout>